add important note about required JVM argument