@@ -54,6 +54,10 @@ Node.js アプリケーションの場合、Databricks データ ソースはメ
 
 Java アプリケーションの場合、Databricks データ ソースはメインの Reveal SDK パッケージに既に含まれています。標準の Reveal SDK セットアップ以外に追加のインストールは必要ありません。
 
+:::danger Important
+The Databricks JDBC Driver supports Apache Arrow. When using a Java JVM version 11 or higher, add the line --add-opens java.base/java.nio=ALL-UNNAMED to the JVM arguments. Without this JVM argument, the driver will not work.
+:::
+
   </TabItem>
 </Tabs>
 
